Fix: aligned trending searches horizontally and centered using flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -102,11 +102,12 @@ nav button {
   background-color: white;
 }
 
-#trending p {
-  background-color: white;
-  color: black;
-  border-radius: 50px;
-  padding: 6px 15px;
+#trending  {
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+  gap: 10px;                
+  flex-wrap: wrap;          
 }
 /* ===== FLEXBOX LAYOUT FOR NAV ===== */
 nav {
